--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 asgiref==3.5.2
+backports.zoneinfo==0.2.1
 Django==4.1.3
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
+PyJWT==2.7.0
 pytz==2022.6
+rest-framework-simplejwt==0.0.2
 sqlparse==0.4.3
 tzdata==2022.6
